2004-03-28  Till Kamppeter <till.kamppeter@gmx.net>

	* USAGE, foomatic-rip.in: Replaced "GIMP-Print" by "Gimp-Print".

2004-03-26  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-rip.in: Fixed building of PDQ driver description file.

2004-02-18  Till Kamppeter <till.kamppeter@gmx.net>

	* *: Tagged CVS for the release of foomatic-filters 3.0.1. 
	  Tag name: "foomatic-filters-3_0_1".

	* README, USAGE: Updated for version 3.0.1.

2004-01-24  Till Kamppeter <till.kamppeter@gmx.net>

	* *: Tagged CVS for the release of foomatic-filters 3.0.1rc3. 
	  Tag name: "foomatic-filters-3_0_1rc3".

	* README, USAGE: Updated for version 3.0.1rc3.

	* configure.in: Removed the AC_OUTPUT() entry to create a Makefile
	  in the tests directory.

2004-01-24  Till Kamppeter <till.kamppeter@gmx.net>

	* *: Tagged CVS for the release of foomatic-filters 3.0.1rc2. 
	  Tag name: "foomatic-filters-3_0_1rc2".

	* README, USAGE: Updated for version 3.0.1rc2.

2004-01-23  Till Kamppeter <till.kamppeter@gmx.net>

	* Removed some more files which do not belong into the stable
	  release.

	* Makefile.in, configure.in, tests/*: Removed Patrick Powells
	  "make test" facility, it did not work.

2004-01-21  Grant Taylor  <gtaylor@linuxprinting.org>

	* Secondary checkin, to remove/add files that changed between
       	  branches.

	* Reverted snafu unstable code checkin introduced onto the stable
	  3.0 branch on Jan 16, and present until Jan 21.

2003-12-21  Till Kamppeter <till.kamppeter@gmx.net>

	* Makefile.in: Fixed compatibility for non-bash systems: Used
	  "VAR=VALUE; export VAR" instead of "export VAR=VALUE" (Thanks
	  to Florian Diesch <diesch@spamfence.net>).

2003-12-01  Till Kamppeter <till.kamppeter@gmx.net>

	* configure.in, Makefile.in: Added fixes and improvements for
	  NetBSD compatibility. Thanks to Bruce J.A. Nourish
	  (bjan+foomatic-devel at bjan dot net) for this contribution.

2003-11-22  Till Kamppeter <till.kamppeter@gmx.net>
